syntax = "proto3";

package management;

option go_package = "managementpb";

import "google/api/annotations.proto";
import "protoc-gen-swagger/options/annotations.proto";

// AddAnnotationRequest is a params to add new annotation.
message AddAnnotationRequest {
  // An annotation description.
  string text = 1;
  // Tags are used to filter annotations.
  repeated string tags = 2;
}

message AddAnnotationResponse {
  // Status message.
  string message = 1;
}

// Annotation service provides public methods for managing Annotations.
service Annotation {
  // AddAnnotation adds annotation.
  rpc AddAnnotation(AddAnnotationRequest) returns (AddAnnotationResponse) {
    option (google.api.http) = {
      post: "/v1/management/Annotations/Add"
      body: "*"
    };
  }
}
