syntax = "proto3";

package role.v1beta1;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "validate/validate.proto";

message CreateRoleRequest {
  string title = 1 [(validate.rules).string.min_len = 1];
  string filter = 2;
  string description = 3;
}

message CreateRoleResponse {
  uint32 role_id = 1;
}

message UpdateRoleRequest {
  uint32 role_id = 1 [(validate.rules).uint32.gt = 0];
  optional string title = 2 [(validate.rules).string.min_len = 1];
  optional string filter = 3;
  optional string description = 4;
}

message DeleteRoleRequest {
  uint32 role_id = 1 [(validate.rules).uint32.gt = 0];
  // Role ID to be used as a replacement for the role. Additional logic applies.
  uint32 replacement_role_id = 2;
}

message GetRoleRequest {
  uint32 role_id = 1 [(validate.rules).uint32.gt = 0];
}

message GetRoleResponse {
  uint32 role_id = 1;
  string title = 2;
  string filter = 3;
  string description = 4;
}

message SetDefaultRoleRequest {
  uint32 role_id = 1 [(validate.rules).uint32.gt = 0];
}

message AssignRolesRequest {
  repeated uint32 role_ids = 1;
  uint32 user_id = 2 [(validate.rules).uint32.gt = 0];
}

message ListRolesResponse {
  message RoleData {
    uint32 role_id = 1;
    string title = 2;
    string filter = 3;
    string description = 4;
  }

  repeated RoleData roles = 1;
}

// Service Role provides public methods for managing Roles.
service RoleService {
  // CreateRole creates a new role.
  rpc CreateRole(CreateRoleRequest) returns (CreateRoleResponse) {
    option (google.api.http) = {
      post: "/v1/role/Create"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Create Role"
      description: "Creates a new Role."
    };
  }

  // UpdateRole creates a new role.
  rpc UpdateRole(UpdateRoleRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/v1/role/Update"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Update Role"
      description: "Updates an existing Role."
    };
  }

  // DeleteRole creates a new role.
  rpc DeleteRole(DeleteRoleRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/v1/role/Delete"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Delete Role"
      description: "Deletes a Role."
    };
  }

  // GetRole retrieves a single role.
  rpc GetRole(GetRoleRequest) returns (GetRoleResponse) {
    option (google.api.http) = {
      post: "/v1/role/Get"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Get Role"
      description: "Retrieves a Role by ID."
    };
  }

  // ListRoles retrieves a roles.
  rpc ListRoles(google.protobuf.Empty) returns (ListRolesResponse) {
    option (google.api.http) = {
      post: "/v1/role/List"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "List Roles"
      description: "Lists Roles."
    };
  }

  // AssignRoles replaces all assigned roles for a user.
  rpc AssignRoles(AssignRolesRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/v1/role/Assign"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Assign Roles"
      description: "Replaces all existing Roles for a User."
    };
  }

  // SetDefaultRole configures default role assigned to users.
  rpc SetDefaultRole(SetDefaultRoleRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/v1/role/SetDefault"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Set default Role"
      description: "Configures a default Role assigned to Users."
    };
  }
}
